# thesis

./: .gitignore  README.md  start_res_server.sh
initial-tests/: .gitignore  README.md  template_env.sh
initial-tests/data/input/: ints_string.csv
initial-tests/duckdb/: app_test.py  requirements.txt
initial-tests/flink/: README.md  pom.xml
initial-tests/polars/: .gitignore  Cargo.toml
initial-tests/polars/src/: main.rs
initial-tests/renoir/: Cargo.toml
initial-tests/renoir/src/: main.rs
initial-tests/risingwave/: README.md  Risingwave.py  app.py  docker-compose.yaml
initial-tests/risingwave/init-scripts/: init.sql
nexmark/: README.md  docker-compose.yaml  run_tests.sh
nexmark/flink/: README.md  pom.xml
nexmark/flink/src/main/resources/queries/: query1.sql  query2.sql  query3.sql  query4.sql  query5.sql  query6.sql  query7.sql  query8.sql
nexmark/flink/src/main/resources/sinks/: query1.sql  query2.sql  query3.sql  query4.sql  query5.sql  query6.sql  query7.sql  query8.sql
nexmark/flink/src/main/resources/sources/: auction.sql  bid.sql  person.sql
nexmark/kafka_event_gen/: Cargo.toml  graph_generator.py  streamlatency.ipynb
nexmark/kafka_event_gen/src/: main.rs
nexmark/kafka_event_gen/src/model/: admin.rs  consumer.rs  events.rs  mod.rs  producer.rs
nexmark/renoir/: Cargo.toml
nexmark/renoir/src/: events.rs  main.rs  models.rs
nexmark/risingwave/: app.py  docker-compose.yaml
nexmark/risingwave/nexmark/: Query.py  Query1.py  Query2.py  Query3.py  Query4.py  Query5.py  Query6.py  Query7.py  Query8.py  Query9.py  __init__.py
nexmark/time_server/: Cargo.toml  README.md  test.py
nexmark/time_server/src/: main.rs
results/server/: app.py  create_db.py  create_db.sql
results/server/templates/: tpc.html
tpc_h/data/input/: database_schema.json  queries_parameters.json
tpc_h/duckdb/: app.py
tpc_h/flink/: pom.xml
tpc_h/polars/: Cargo.toml
tpc_h/polars/src/: main.rs
tpc_h/queries/: query1.sql  query10.sql  query11.sql  query12.sql  query15.sql  query18.sql  query2.sql  query21.sql  query3.sql  query7.sql  query8.sql
tpc_h/renoir/: Cargo.toml
tpc_h/renoir/src/: main.rs
tpc_h/risingwave/: app.py  docker-compose.yaml
(+19 files in other folders)
