[package]
name = "renoir-nexmark"
version = "0.1.0"
edition = "2021"

[dependencies]
renoir = { git = "https://github.com/deib-polimi/renoir.git", branch = "dev", features = ["rdkafka"] }
serde = { version = "1.0.215", features = ["derive"] }
rdkafka = { version = "0.37.0", features = ["tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0"
nexmark = "0.1"
clap = {version = "4.5.23", features = ["derive"]} 
tracing-subscriber = "0.3.19"
