[package]
name = "renoir-tpc"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
chronoutil = "0.2.7"
csv = "1.3.1"
ordered-float = "4.6.0"
regex = "1.11.1"
renoir = "0.2.0"
reqwest = {version = "0.12.12", features = ["json", "blocking"]}
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.134"
